<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.mytodos.ui.viewModel.TodoViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/PG"
        tools:context=".ui.todoTask.AddTodoTaskFragment">

        <EditText
            android:id="@+id/TaskTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/white_rounded_bg"
            android:hint="@string/task_title"
            android:text="@={viewModel.todoItem.title}"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/TaskBodyET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/white_rounded_bg"
            android:gravity="top"
            android:hint="write..."
            android:text="@={viewModel.todoItem.body}"
            android:minHeight="200dp"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskTitleET" />


        <RelativeLayout
            android:id="@+id/TaskTimeContainer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:background="@drawable/white_rounded_bg"
            android:hint="@string/task_title"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskBodyET">

            <TextView
                android:id="@+id/dueDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Due Date"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:layout_marginBottom="4dp"
                android:layout_alignParentBottom="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timePickerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_bg"
                android:padding="8dp"
                android:hint="00:00 AM"
                android:text="@={viewModel.todoItem.time}"
                android:textColor="@color/black" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_rocket"
            android:padding="8dp"
            android:background="@drawable/yellow_rounded"
            app:layout_constraintEnd_toStartOf="@+id/doneBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskTimeContainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_done"
            android:background="@drawable/green_rounded"
            android:padding="6dp"
            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startBtn"
            app:layout_constraintTop_toBottomOf="@+id/TaskTimeContainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_delete"
            android:textColor="@color/white"
            android:padding="6dp"
            android:background="@drawable/red_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/doneBtn"
            app:layout_constraintTop_toBottomOf="@+id/TaskTimeContainer" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>